--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.6.5",
     "bootstrap": "^5.3.2",
     "formik": "^2.4.5",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
+    "sweetalert2": "^11.10.3",
     "swiper": "^11.0.5",
     "zod": "^3.22.4",
     "zod-formik-adapter": "^1.2.0"
